# langchain-template-docugami-kg-rag

./: .gitignore  Makefile  README.md  index.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: server.py
docugami_kg_rag/: __init__.py  agent.py  chain.py  config.py  indexing.py  state_models.py
docugami_kg_rag/config/: __init__.py  chromadb.py  fireworksai.py  fireworksai_llama3.py  fireworksai_mixtral.py  huggingface.py  openai.py  redis.py
docugami_kg_rag/green_examples/: answer_examples.yaml  describe_document_set_examples.yaml  sql_examples.yaml  sql_fixup_examples.yaml  standalone_question_examples.yaml  summarize_chunk_examples.yaml  summarize_document_examples.yaml
docugami_kg_rag/helpers/: documents.py  fused_summary_retriever.py  indexing.py  prompts.py  reports.py  retrieval.py  soft_react_json_single_input.py
evals/: eval-csv.ipynb  run-evals.ipynb  sec-10-q.ipynb
notebooks/: eval-sec-10-q.ipynb  run-csv.ipynb
