[tool.poetry]
name = "docugami-kg-rag"
version = "0.5.0"
description = "This template contains a reference architecture for Retrieval Augmented Generation against a set of documents using Docugami's XML Knowledge Graph (KG-RAG)."
authors = [
    "Docugami <contact@docugami.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = ">=0.1.13"
langchain-community = ">=0.0.29"
# docugami-langchain = "^0.0.7rc18"
docugami-langchain = {git = "https://github.com/docugami/docugami-langchain.git"}
typer = ">=0.9.0"
docugami = ">=0.1.2"
pyarrow = ">=15.0.2"
langsmith = ">=0.1.31"
openpyxl = ">=3.1.2"
faiss-cpu = ">=1.8.0"
rerankers = { extras = ["all"], version = ">=0.1.2" }
langchain-openai = { version = ">=0.1.1", optional = true }
langchain-fireworks = { version = ">=0.1.1", optional = true } 
chromadb = { version = ">=0.4.24", optional = true }
redis = { version = ">=5.0.3", optional = true }
redisvl = { version = ">=0.1.2", optional = true }
torch = {  version = ">=2.2.1", optional = true }
huggingface = { version = ">=0.0.1", optional = true }
sentence-transformers = { version = ">=2.6.0", optional = true }

[tool.poetry.group.dev.dependencies]
langchain-cli = "*"
ipykernel = "*"
black = "*"
pytest = "*"
pyyaml = "*"
ruff = "*"

[tool.poetry.extras]
openai = ["langchain-openai", "tiktoken"]
fireworks = ["langchain-fireworks"]
chromadb = ["chromadb"]
redis = ["redis", "redisvl"]
huggingface = ["torch", "huggingface", "sentence-transformers"]

[tool.black]
line-length = 127

[tool.ruff]
ignore = ["E501", "E402", "F403"]

[tool.langserve]
export_module = "docugami_kg_rag"
export_attr = "agent"

[tool.templates-hub]
use-case = "rag"
author = "Docugami"
integrations = ["OpenAI"]
tags = ["vectordbs"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
norecursedirs = ".venv temp"

[tool.pyright]
ignore = ["**/node_modules", "**/__pycache__", ".venv"]
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
